--- a/ProjectGroup5/Items/wndItems.xaml
+++ b/ProjectGroup5/Items/wndItems.xaml
@@ -1,12 +1,68 @@
 ﻿<Window x:Class="ProjectGroup5.Items.wndItems"
-        xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:ProjectGroup5.Items"
         mc:Ignorable="d"
-        Title="wndItems" Height="450" Width="800">
+        Title="wndItems" Height="379" Width="666" Loaded="wndItems_loaded">
     <Grid>
-        
+
+        <Button x:Name="UpdateDescBtn" Content="Update Description" HorizontalAlignment="Left" Height="36" Margin="498,82,0,0" VerticalAlignment="Top" Width="117" Click="UpdateDescBtn_Click"/>
+        <Button x:Name="DeleteBtn" Content="Delete Item" HorizontalAlignment="Left" Height="35" Margin="498,242,0,0" VerticalAlignment="Top" Width="117" Click="DeleteBtn_Click" Background="#FFDE7474"/>
+
+        <!-- visibile after update Description button is pushed -->
+
+        <Button x:Name="SaveBtn" Content="Save Item" HorizontalAlignment="Left" Height="35" Margin="498,196,0,0" VerticalAlignment="Top" Width="117" Click="SaveBtn_Click" Background="#FFC5F5C6"/>
+        <Button x:Name="UpdateLineItemBtn" Content="Update Line Item" HorizontalAlignment="Left" Height="35" Margin="498,127,0,0" VerticalAlignment="Top" Width="117" Click="UpdateLineItemBtn_Click"/>
+
+        <!-- visibile after update Line Item button is pushed -->
+
+
+
+        <Button x:Name="AddItemBtn" Content="Add Item" HorizontalAlignment="Left" Height="35" Margin="498,33,0,0" VerticalAlignment="Top" Width="117" Click="AddItemBtn_Click" Background="#FFC5F5C6"/>
+
+
+
+
+        <DataGrid x:Name="ItemDataGrid" HorizontalAlignment="Left" Height="136" Margin="24,50,0,0" VerticalAlignment="Top" Width="425" CanUserAddRows="False" SelectionChanged="ItemDB_SelectionChanged" >
+            <DataGrid.Columns>
+
+
+            </DataGrid.Columns>
+
+        </DataGrid>
+
+        <!-- visibile after updateLineItem Item button is pushed -->
+        <Canvas x:Name="UpdateLineItemCanvas" HorizontalAlignment="Left" Height="154" Margin="24,206,0,0" VerticalAlignment="Top" Width="378" Visibility="Hidden">
+            <TextBox x:Name="InvoiceNumberTxtbx" Height="28" Canvas.Left="146" Canvas.Top="30" TextWrapping="Wrap" Width="86"/>
+            <TextBox x:Name="LineNumberTxtbx" Height="28" Canvas.Left="146" Canvas.Top="63" TextWrapping="Wrap" Width="86"/>
+            <TextBox x:Name="LineItemCostTextBox" TextWrapping="Wrap" Width="86" Canvas.Left="146" Canvas.Top="96" Height="28"/>
+            <Label Content="Invoice Number: " Height="28" Canvas.Left="10" Canvas.Top="30" Width="123"/>
+            <Label Content="Line Number: " Height="28" Canvas.Left="10" Canvas.Top="63" Width="104"/>
+            <Label Content="Line Item Cost:" Height="28" Canvas.Left="10" Canvas.Top="96" Width="104"/>
+        </Canvas>
+
+        <!-- visibile after Add Item button is pushed -->
+        <Canvas x:Name="AddItemCanvas" HorizontalAlignment="Left" Height="146" Margin="24,201,0,0" VerticalAlignment="Top" Width="425" Visibility="Visible">
+            <Label Content="Item Description :" HorizontalAlignment="Left" Height="32" VerticalAlignment="Top" Width="105" />
+            <Label Content="Cost :" Height="32" Width="77" Canvas.Top="73"/>
+            <Label Content="Item Code : " Height="32" Width="97" Canvas.Left="122" Canvas.Top="74"/>
+            <TextBox x:Name="AddItemDescriptionTxtbx" Height="35"  TextWrapping="Wrap" Width="361" Canvas.Top="37"/>
+            <TextBox x:Name="AddItemCostTxtbx" Height="35"  TextWrapping="Wrap" Width="77" Canvas.Top="106"/>
+            <TextBox x:Name="AddItemCodeTxtbx" Height="35"  TextWrapping="Wrap" Width="78" Canvas.Left="122" Canvas.Top="106"/>
+        </Canvas>
+        <!-- hidden until    update button pushed -->
+        <Canvas x:Name="UpdateDescCanvas" HorizontalAlignment="Left" Height="150" Margin="24,197,0,0" VerticalAlignment="Top" Width="364" Visibility="Hidden">
+            <Label Content="Item Description:" Height="32" Width="105" Margin="10,0,0,0" Canvas.Left="-11"/>
+            <Label Content="Cost:" Height="32" Width="77" Canvas.Top="73"/>
+            <TextBox x:Name="ItemDescriptionTxtbx" Height="35"  TextWrapping="Wrap" Width="238" Canvas.Top="33"/>
+            <TextBox x:Name="ItemCostTxtbx" Height="35"  TextWrapping="Wrap" Width="77" Canvas.Left="-1" Canvas.Top="105"/>
+        </Canvas>
+        <Button x:Name="CancelBtn" Content="Cancel" HorizontalAlignment="Left" Height="35" Margin="498,294,0,0" VerticalAlignment="Top" Width="117" Background="#FFDE7474" Click="CancelBtn_Click"/>
+
+
+
     </Grid>
 </Window>
+
