--- a/ProjectGroup5/Search/wndSearch.xaml
+++ b/ProjectGroup5/Search/wndSearch.xaml
@@ -6,17 +6,22 @@
         xmlns:local="clr-namespace:ProjectGroup5.Search"
         mc:Ignorable="d"
         Title="wndSearch" Height="450" Width="800">
-    <Grid>
-        <DataGrid HorizontalAlignment="Center" Height="184" Margin="0,19,0,0" VerticalAlignment="Top" Width="664" d:ItemsSource="{d:SampleData ItemCount=5}"/>
+    <Grid Background="#FFE5E5E5">
+        <GroupBox x:Name="searchGroupbox" HorizontalAlignment="Left" Height="187" Header="Search Filters" Margin="29,223,0,0" VerticalAlignment="Top" Width="737"/>
+
+        <DataGrid x:Name="invoiceDatagrid" HorizontalAlignment="Center" Height="184" Margin="0,19,0,0" VerticalAlignment="Top" Width="664" d:ItemsSource="{d:SampleData ItemCount=1}">
+            <DataGrid.BindingGroup>
+                <BindingGroup/>
+            </DataGrid.BindingGroup>
+        </DataGrid>
         <Label x:Name="invoiceNumSearchLabel" Content="Invoice Number: " HorizontalAlignment="Left" Height="29" Margin="58,260,0,0" VerticalAlignment="Top" Width="150" RenderTransformOrigin="0.21,0.6"/>
         <Label x:Name="invoiceDateSearchLabel" Content="Invoice Date: " HorizontalAlignment="Left" Height="29" Margin="231,260,0,0" VerticalAlignment="Top" Width="150"/>
-        <Button x:Name="searchButton" Content="Search" HorizontalAlignment="Left" Height="43" Margin="570,246,0,0" VerticalAlignment="Top" Width="163" Background="#FFFEF2E0"/>
-        <Button x:Name="clearFiltersButton" Content="Clear Filters" HorizontalAlignment="Left" Height="43" Margin="570,312,0,0" VerticalAlignment="Top" Width="163" Background="#FFDE7474"/>
-        <ComboBox x:Name="invoiceNumberComboBox" HorizontalAlignment="Left" Height="29" Margin="58,312,0,0" VerticalAlignment="Top" Width="150"/>
-        <ComboBox x:Name="invoiceDateComboBox" HorizontalAlignment="Left" Height="29" Margin="228,311,0,0" VerticalAlignment="Top" Width="150"/>
-        <Label x:Name="invoiceDateSearchLabel1" Content="Invoice Date: " HorizontalAlignment="Left" Height="29" Margin="390,260,0,0" VerticalAlignment="Top" Width="150"/>
-        <ComboBox x:Name="inoiceDateComboBox" HorizontalAlignment="Left" Height="30" Margin="390,311,0,0" VerticalAlignment="Top" Width="150"/>
-        <GroupBox x:Name="searchGroupbox" HorizontalAlignment="Left" Height="187" Header="Search Filters" Margin="29,223,0,0" VerticalAlignment="Top" Width="737"/>
+        <Button x:Name="selectButton" Content="Select Invoice" HorizontalAlignment="Left" Height="42" Margin="569,274,0,0" VerticalAlignment="Top" Width="163" Background="#FFC5F5C6" Click="selectButton_Click"/>
+        <Button x:Name="clearFiltersButton" Content="Clear Filters" HorizontalAlignment="Left" Height="44" Margin="569,326,0,0" VerticalAlignment="Top" Width="163" Background="#FFDE7474"/>
+        <ComboBox x:Name="invoiceNumberComboBox" HorizontalAlignment="Left" Height="30" Margin="58,311,0,0" VerticalAlignment="Top" Width="150" SelectionChanged="invoiceNumberComboBox_SelectionChanged"/>
+        <ComboBox x:Name="invoiceDateComboBox" HorizontalAlignment="Left" Height="30" Margin="228,311,0,0" VerticalAlignment="Top" Width="150" SelectionChanged="invoiceDateComboBox_SelectionChanged"/>
+        <Label x:Name="invoiceCostSearchLabel" Content="Total Cost: " HorizontalAlignment="Left" Height="29" Margin="390,260,0,0" VerticalAlignment="Top" Width="150"/>
+        <ComboBox x:Name="invoiceCostComboBox" HorizontalAlignment="Left" Height="30" Margin="390,311,0,0" VerticalAlignment="Top" Width="150" SelectionChanged="invoiceCostComboBox_SelectionChanged"/>
 
     </Grid>
 </Window>
