--- a/ProjectGroup5/Main/wndMain.xaml
+++ b/ProjectGroup5/Main/wndMain.xaml
@@ -5,7 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:ProjectGroup5.Main"
         mc:Ignorable="d"
-        Title="wndMain" Height="450" Width="800">
+        Title="wndMain" Height="485" Width="825" MinHeight="475" MinWidth="825">
     <Grid Background="#FFE5E5E5">
         <Grid.RowDefinitions>
             <RowDefinition Height="20"/>
@@ -33,40 +33,46 @@
                         <Label Grid.Row="0" Grid.Column="1" x:Name="LblDate" Content="N/A" HorizontalAlignment="Right" HorizontalContentAlignment="Left"/>
                         <Label Grid.Row="1" Grid.Column="1" x:Name="LblTotalAmount" Content="N/A" HorizontalAlignment="Right" HorizontalContentAlignment="Left"/>
                     </Grid>
-                    <Button x:Name="BtnEditInvoice" Content="Edit Invoice" Padding="1,3,1,3" Margin="0,30,0,0" BorderThickness="1,1,2,2" BorderBrush="Black"/>
-                    <Button x:Name="BtnSaveInvoice" Content="Save Invoice" Padding="1,3,1,3" Margin="0,30,0,0" BorderThickness="1,1,2,2" BorderBrush="Black" Background="#FFC5F5C6"/>
-                    <Button x:Name="BtnDeleteInvoice" Content="Delete Invoice" Padding="1,3,1,3" Margin="0,30,0,0" Background="#FFDE7474" BorderThickness="1,1,2,2" BorderBrush="Black"/>
+                    <Button x:Name="BtnNewInvoice" Content="New Invoice" Padding="1,3,1,3" Margin="0,30,0,0" BorderThickness="1,1,2,2" BorderBrush="Black" Click="BtnNewInvoice_Click"/>
+                    <Button x:Name="BtnEditInvoice" Content="Edit Invoice" Padding="1,3,1,3" Margin="0,30,0,0" BorderThickness="1,1,2,2" BorderBrush="Black" Click="BtnEditInvoice_Click" IsEnabled="False"/>
+                    <Button x:Name="BtnSaveInvoice" Content="Save Invoice" Padding="1,3,1,3" Margin="0,30,0,0" BorderThickness="1,1,2,2" BorderBrush="Black" Background="#FFC5F5C6" IsEnabled="False" Click="BtnSaveInvoice_Click"/>
+                    <Button x:Name="BtnDeleteInvoice" Content="Delete Invoice" Padding="1,3,1,3" Margin="0,30,0,0" Background="#FFDE7474" BorderThickness="1,1,2,2" BorderBrush="Black" IsEnabled="False" Click="BtnDeleteInvoice_Click"/>
                 </StackPanel>
             </Border>
             <StackPanel>
-                <StackPanel Orientation="Horizontal">
-                    <Border BorderBrush="Black" BorderThickness="2,2,1,1" Margin="20,20,20,20">
+                <StackPanel x:Name="SpAddRemove" Orientation="Horizontal" IsEnabled="False">
+                    <Border BorderBrush="Black" BorderThickness="2,2,1,1" Margin="5,20,5,20">
                         <StackPanel Margin="10,10,10,10">
                             <Label x:Name="LblAddItem" Content="Add Item" HorizontalAlignment="Center" FontSize="22" Margin="0,0,0,5"/>
                             <StackPanel Orientation="Horizontal">
-                                <Label x:Name="LblItem1" Content="Item:" FontSize="16" Margin="0,0,10,0" HorizontalContentAlignment="Left" HorizontalAlignment="Left" IsTabStop="True" VerticalAlignment="Center" VerticalContentAlignment="Center"/>
-                                <ComboBox x:Name="CbAddItems" FontSize="16" Width="122" Height="23"/>
+                                <Label x:Name="LblItem1" Content="Item:" FontSize="16" Margin="0,0,10,0" HorizontalContentAlignment="Left" IsTabStop="True" VerticalAlignment="Center" VerticalContentAlignment="Center" Width="45"/>
+                                <ComboBox x:Name="CbAddItems" FontSize="16" Width="98" Height="23" SelectionChanged="CbAddItems_SelectionChanged"/>
                             </StackPanel>
-                            <Button x:Name="BtnAdd" Content="Add" Padding="1,3,1,3" Margin="0,15,0,5" Background="#FFC5F5C6" BorderThickness="1,1,2,2" BorderBrush="Black" Width="93"/>
+                            <Label x:Name="lblAddPrice" Content="$0.00" HorizontalAlignment="Center" HorizontalContentAlignment="Center"/>
+                            <Button x:Name="BtnAdd" Content="Add" Padding="1,3,1,3" Margin="0,5,0,5" Background="#FFC5F5C6" BorderThickness="1,1,2,2" BorderBrush="Black" Width="93" Click="BtnAdd_Click" IsEnabled="False"/>
                         </StackPanel>
                     </Border>
-                    <Border BorderBrush="Black" BorderThickness="2,2,1,1" Margin="20,20,20,20">
+                    <Border BorderBrush="Black" BorderThickness="2,2,1,1" Margin="5,20,5,20">
                         <StackPanel Margin="10,10,10,10">
                             <Label x:Name="LblRemoveItem" Content="Remove Item" HorizontalAlignment="Center" FontSize="22" Margin="0,0,0,5"/>
                             <StackPanel Orientation="Horizontal">
-                                <Label x:Name="LblItem2" Content="Item:" FontSize="16" Margin="0,0,10,0" HorizontalContentAlignment="Left" HorizontalAlignment="Left" IsTabStop="True" VerticalAlignment="Center" VerticalContentAlignment="Center"/>
-                                <ComboBox x:Name="CbRemoveItems" FontSize="16" Width="122" Height="23"/>
+                                <Label x:Name="LblItem2" Content="Item:" FontSize="16" Margin="0,0,10,0" HorizontalContentAlignment="Left" IsTabStop="True" VerticalAlignment="Center" VerticalContentAlignment="Center" Width="45"/>
+                                <ComboBox x:Name="CbRemoveItems" FontSize="16" Width="100" Height="23" SelectionChanged="CbRemoveItems_SelectionChanged"/>
                             </StackPanel>
-                            <Button x:Name="BtnRemove" Content="Remove" Padding="1,3,1,3" Margin="0,15,0,5" Background="#FFDE7474" BorderThickness="1,1,2,2" BorderBrush="Black" Width="85"/>
+                            <Label x:Name="lblRemovePrice" Content="$0.00" HorizontalAlignment="Center" HorizontalContentAlignment="Center"/>
+                            <Button x:Name="BtnRemove" Content="Remove" Padding="1,3,1,3" Margin="0,5,0,5" Background="#FFDE7474" BorderThickness="1,1,2,2" BorderBrush="Black" Width="85" IsEnabled="False" Click="BtnRemove_Click"/>
                         </StackPanel>
+                    </Border>
+                    <Border BorderBrush="Black" BorderThickness="2,2,1,1" Margin="5,20,5,20">
+                        <Calendar x:Name="cldDate"/>
                     </Border>
                 </StackPanel>
                 <StackPanel Orientation="Horizontal" HorizontalAlignment="Right" Margin="0,0,20,0">
-                    <Button x:Name="BtnDown" Content="Down" Padding="1,3,1,3" Margin="0,15,0,0" BorderThickness="1,1,1,0" BorderBrush="Black" Width="51"/>
-                    <Button x:Name="BtnUP" Content="Up" Padding="1,3,1,3" Margin="0,15,0,0" BorderThickness="1,1,2,0" BorderBrush="Black" Width="51"/>
+                    <Button x:Name="BtnDown" Content="Down" Padding="1,3,1,3" Margin="0,15,0,0" BorderThickness="1,1,1,0" BorderBrush="Black" Width="51" Click="BtnDown_Click"/>
+                    <Button x:Name="BtnUP" Content="Up" Padding="1,3,1,3" Margin="0,15,0,0" BorderThickness="1,1,2,0" BorderBrush="Black" Width="51" Click="BtnUP_Click"/>
                 </StackPanel>
                 <Border BorderBrush="Black" BorderThickness="2,2,1,1" Margin="20,0,20,20">
-                    <Grid>
+                    <Grid x:Name="GridItems">
                         <Grid.RowDefinitions>
                             <RowDefinition Height="*"/>
                             <RowDefinition Height="*"/>
